--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/MyProjects/v15/Browse.VC.opendb
+/.vs/MyProjects/v15/Browse.VC.db
